Add VM option instructions for IllegalAccessError
Added instructions for fixing IllegalAccessError in IntelliJ.